Update java.sh